<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="durationformatshort">%2$d:%3$02d</string>
    <string name="durationformatlong">%1$d:%2$02d:%3$02d</string>
    <string name="app_name">Apollo</string>
    <string name="page_recent">Recent</string>
    <string name="page_artists">Artists</string>
    <string name="page_albums">Albums</string>
    <string name="page_songs">Songs</string>
    <string name="page_playlists">Playlists</string>
    <string name="page_genres">Genres</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_shuffle">Shuffle all</string>
    <string name="menu_play_all">Play all</string>
    <string name="menu_sort_by">Sort by</string>
    <string name="menu_shop">Shop for themes</string>
    <string name="menu_clear_recents">Clear recent</string>
    <string name="menu_clear_queue">Clear queue</string>
    <string name="menu_save_queue">Save queue</string>
    <string name="menu_share">Share</string>
    <string name="menu_add_to_homescreen">Pin to home screen</string>
    <string name="menu_equalizer">Equalizer</string>
    <string name="menu_simple">Simple</string>
    <string name="menu_detailed">Detailed</string>
    <string name="menu_grid">Grid</string>
    <string name="menu_view_as">View as</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="remove_from_recent">Remove from recent</string>
    <string name="remove_from_queue">Remove from queue</string>
    <string name="sort_order_entry_az">A-Z</string>
    <string name="sort_order_entry_za">Z-A</string>
    <string name="sort_order_entry_artist">Artist</string>
    <string name="sort_order_entry_album">Album</string>
    <string name="sort_order_entry_year">Year</string>
    <string name="sort_order_entry_duration">Duration</string>
    <string name="sort_order_entry_date_added">Date added</string>
    <string name="sort_order_entry_track_list">Track list</string>
    <string name="sort_order_entry_number_of_songs">Number of songs</string>
    <string name="sort_order_entry_number_of_albums">Number of albums</string>
    <string name="playlist_favorite">Favorite</string>
    <string name="playlist_favorites">Favorites</string>
    <string name="playlist_last_added">Last added</string>
    <string name="new_playlist">New playlist</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="overwrite">Overwrite</string>
    <string name="new_playlist_name_template">Playlist %d</string>
    <string name="create_playlist_prompt">Playlist name</string>
    <string name="delete_dialog_title">Delete %s?</string>
    <string name="cannot_be_undone">This cannot be undone</string>
    <string name="delete_warning">This will permanently delete the cached image entries</string>
    <string name="new_photo">Choose photo from Gallery</string>
    <string name="google_search">Google search</string>
    <string name="use_default">Use default photo</string>
    <string name="old_photo">Use old photo</string>
    <string name="context_menu_play_selection">Play</string>
    <string name="context_menu_play_next">Play next</string>
    <string name="context_menu_more_by_artist">More by artist</string>
    <string name="context_menu_rename_playlist">Rename</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_fetch_album_art">Fetch album art</string>
    <string name="context_menu_fetch_artist_image">Fetch artist image</string>
    <string name="context_menu_open_in_play_store">Open in Play Store</string>
    <string name="context_menu_remove_from_recent">Remove from recent</string>
    <string name="context_menu_use_as_ringtone">Use as ringtone</string>
    <string name="accessibility_play">Play</string>
    <string name="accessibility_pause">Pause</string>
    <string name="accessibility_next">Next</string>
    <string name="accessibility_prev">Previous</string>
    <string name="accessibility_shuffle">Shuffle</string>
    <string name="accessibility_shuffle_all">Shuffle all</string>
    <string name="accessibility_repeat">Repeat</string>
    <string name="accessibility_repeat_all">Repeat all</string>
    <string name="accessibility_repeat_one">Repeat one</string>
    <string name="pinned_to_home_screen">%s pinned to your home screen</string>
    <string name="could_not_be_pinned_to_home_screen">%s could not be pinned to your home screen</string>
    <string name="set_as_ringtone">"'%s' set as ringtone"</string>
    <string name="playlist_renamed">Playlist renamed</string>
    <string name="theme_set">%s set as the theme</string>
    <string name="settings_ui_category">Interface</string>
    <string name="settings_storage_category">Storage</string>
    <string name="settings_data_category">Data</string>
    <string name="settings_about_category">About</string>
    <string name="settings_author_title">Author</string>
    <string name="settings_about_apollo">About Apollo</string>
    <string name="settings_special_thanks">Special thanks</string>
    <string name="settings_cyanogenmod_title">CyanogenMod</string>
    <string name="settings_self_title">Andrew Neal</string>
    <string name="settings_lopez_title">A.J. Lopez</string>
    <string name="settings_lopez_summary">Icon and Play Store banner design</string>
    <string name="settings_color_scheme_title">"Choose Apollo's default color scheme"</string>
    <string name="settings_color_scheme_summary">Changes the accent color in Apollo</string>
    <string name="settings_theme_chooser_title">Theme chooser</string>
    <string name="settings_delete_cache_title">Delete cache</string>
    <string name="settings_delete_cache_summary">Remove all cached images</string>
    <string name="settings_download_only_on_wifi_title">Download via Wi-Fi only</string>
    <string name="settings_download_only_on_wifi_summary">"To reduce carrier charges, don't download over mobile networks"</string>
    <string name="settings_download_missing_artwork_title">Download missing album art</string>
    <string name="settings_download_artist_images_title">Download missing artist images</string>
    <string name="settings_open_source_licenses">Open source licenses</string>
    <string name="settings_use_lockscreen_controls">Use lockscreen controls</string>
    <string name="settings_version_title">Version number</string>
    <string name="now_listening_to">\#NowPlaying %1$s by %2$s #Apollo</string>
    <string name="share_track_using">Share track using:</string>
    <string name="color_picker_title">Color scheme</string>
    <string name="hex">\#</string>
    <string name="current_color">Current</string>
    <string name="new_color">New</string>
    <string name="app_widget_small">Apollo: 4x1</string>
    <string name="app_widget_large">Apollo: 4x2</string>
    <string name="app_widget_large_alt">Apollo: 4x2 (alternate)</string>
    <string name="app_widget_recent">Apollo: recently listened</string>
    <string name="app_widget_text_separator">-</string>
    <string name="apollo_themes_shop_key">Apollo Themes</string>
    <string name="no_effects_for_you">The equalizer could not be opened.</string>
    <string name="empty_music">To copy music from your computer to your device, use a USB cable.</string>
    <string name="empty_last_added">Songs you have added over the last month will be shown here.</string>
    <string name="empty_search">No search results found</string>
    <string name="empty_favorite">Songs you mark as favorites will be shown here.</string>
    <string name="empty_recent">Albums you have listened to will show up here. Try playing some music.</string>
    <string name="settings_alberto97_title">Alberto97</string>
    <string name="settings_alberto97_summary">Pre-applied Holo Light Theme + Notification Player and Widgets Themed</string>
</resources>
