<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/menu_sort_by" android:title="@string/menu_sort_by" android:showAsAction="never">
        <menu>
            <item android:id="@id/menu_sort_by_az" android:title="@string/sort_order_entry_az" />
            <item android:id="@id/menu_sort_by_za" android:title="@string/sort_order_entry_za" />
            <item android:id="@id/menu_sort_by_year" android:title="@string/sort_order_entry_year" />
            <item android:id="@id/menu_sort_by_album" android:title="@string/sort_order_entry_album" />
            <item android:id="@id/menu_sort_by_duration" android:title="@string/sort_order_entry_duration" />
            <item android:id="@id/menu_sort_by_date_added" android:title="@string/sort_order_entry_date_added" />
        </menu>
    </item>
</menu>