<?xml version="1.0" encoding="utf-8"?>
<GridLayout android:gravity="top" android:background="@drawable/ab_solid_light_holo" android:padding="@dimen/app_widget_padding" android:layout_width="fill_parent" android:layout_height="fill_parent" android:rowCount="3" android:columnCount="2"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/app_widget_small_image" android:background="@drawable/default_artwork" android:layout_width="@dimen/app_widget_small_artwork_size" android:layout_height="@dimen/app_widget_small_artwork_size" android:scaleType="centerInside" android:contentDescription="@null" />
    <LinearLayout android:gravity="center_horizontal" android:layout_gravity="fill_horizontal" android:orientation="horizontal" android:focusable="true">
        <ImageButton android:id="@id/app_widget_small_previous" android:background="@null" android:padding="@dimen/app_widget_small_button_padding" android:focusable="true" android:layout_width="0.0dip" android:layout_height="@dimen/app_widget_small_button_height" android:src="@drawable/btn_playback_previous" android:scaleType="fitCenter" android:layout_weight="1.0" android:contentDescription="@string/accessibility_prev" />
        <ImageButton android:id="@id/app_widget_small_play" android:background="@null" android:padding="@dimen/app_widget_small_button_padding" android:focusable="true" android:layout_width="0.0dip" android:layout_height="@dimen/app_widget_small_button_height" android:src="@drawable/btn_playback_play" android:scaleType="fitCenter" android:layout_weight="1.0" android:contentDescription="@string/accessibility_play" />
        <ImageButton android:id="@id/app_widget_small_next" android:background="@null" android:padding="@dimen/app_widget_small_button_padding" android:focusable="true" android:layout_width="0.0dip" android:layout_height="@dimen/app_widget_small_button_height" android:src="@drawable/btn_playback_next" android:scaleType="fitCenter" android:layout_weight="1.0" android:contentDescription="@string/accessibility_next" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="fill_horizontal" android:background="@color/transparent_white" android:layout_height="1.0dip" android:layout_columnSpan="2" />
    <LinearLayout android:gravity="center_vertical" android:layout_gravity="fill" android:orientation="horizontal" android:id="@id/app_widget_small_info_container" android:paddingLeft="@dimen/app_widget_small_info_container_padding_left" android:paddingRight="@dimen/app_widget_small_info_container_padding_right" android:focusable="true" android:layout_marginBottom="@dimen/app_widget_bottom_margin" android:layout_columnSpan="2">
        <TextView android:textSize="@dimen/text_size_small" android:textStyle="bold" android:textColor="@color/holo_blue_light" android:ellipsize="none" android:id="@id/app_widget_small_line_one" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
        <TextView android:textSize="@dimen/text_size_small" android:textStyle="bold" android:textColor="@color/widget2" android:ellipsize="none" android:id="@id/app_widget_small_text_separator" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_widget_text_separator" android:singleLine="true" />
        <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/widget2" android:ellipsize="marquee" android:id="@id/app_widget_small_line_two" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
    </LinearLayout>
</GridLayout>