<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
        <com.andrew.apollo.widgets.ShuffleButton android:layout_gravity="center" android:id="@id/action_button_shuffle" android:layout_width="@dimen/audio_player_controls_end_button_width" android:layout_height="@dimen/audio_player_controls_end_button_height" android:src="@drawable/btn_playback_shuffle" android:scaleType="centerInside" android:contentDescription="@string/accessibility_shuffle" />
    </FrameLayout>
    <FrameLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
        <com.andrew.apollo.widgets.RepeatingImageButton android:layout_gravity="center" android:id="@id/action_button_previous" android:layout_width="@dimen/audio_player_controls_main_button_width" android:layout_height="@dimen/audio_player_controls_main_button_height" android:src="@drawable/ntf_btn_playback_previous" android:scaleType="centerInside" />
    </FrameLayout>
    <FrameLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
        <com.andrew.apollo.widgets.PlayPauseButton android:layout_gravity="center" android:id="@id/action_button_play" android:focusable="true" android:layout_width="@dimen/audio_player_controls_main_button_width" android:layout_height="@dimen/audio_player_controls_main_button_height" android:src="@drawable/ntf_btn_playback_play" android:scaleType="centerInside" android:contentDescription="@string/accessibility_play" />
    </FrameLayout>
    <FrameLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
        <com.andrew.apollo.widgets.RepeatingImageButton android:layout_gravity="center" android:id="@id/action_button_next" android:layout_width="@dimen/audio_player_controls_main_button_width" android:layout_height="@dimen/audio_player_controls_main_button_height" android:src="@drawable/ntf_btn_playback_next" android:scaleType="centerInside" />
    </FrameLayout>
    <FrameLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
        <com.andrew.apollo.widgets.RepeatButton android:layout_gravity="center" android:id="@id/action_button_repeat" android:focusable="true" android:layout_width="@dimen/audio_player_controls_end_button_width" android:layout_height="@dimen/audio_player_controls_end_button_height" android:src="@drawable/btn_playback_repeat" android:scaleType="centerInside" android:contentDescription="@string/accessibility_repeat" />
    </FrameLayout>
</merge>