<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:padding="@dimen/color_scheme_dialog_row_padding" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.andrew.apollo.widgets.ColorPickerView android:id="@id/color_picker_view" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <LinearLayout android:orientation="horizontal" android:id="@id/color_scheme_dialog_row_one" android:paddingLeft="@dimen/color_scheme_dialog_row_padding" android:paddingRight="@dimen/color_scheme_dialog_row_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:layout_below="@id/color_picker_view">
        <Button android:id="@id/color_scheme_dialog_preset_one" android:background="@color/holo_blue_light" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <Button android:id="@id/color_scheme_dialog_preset_two" android:background="@color/holo_green_light" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/color_scheme_dialog_row_padding" android:layout_weight="1.0" />
        <Button android:id="@id/color_scheme_dialog_preset_three" android:background="@color/holo_orange_dark" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/color_scheme_dialog_row_padding" android:layout_weight="1.0" />
        <Button android:id="@id/color_scheme_dialog_preset_four" android:background="@color/holo_orange_light" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/color_scheme_dialog_row_padding" android:layout_weight="1.0" />
        <Button android:textSize="@dimen/text_size_micro" android:textStyle="bold" android:id="@id/color_scheme_dialog_old_color" android:background="@color/holo_blue_light" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/color_scheme_dialog_row_padding" android:text="@string/current_color" android:layout_weight="2.0" />
        <Button android:textSize="@dimen/text_size_micro" android:textStyle="bold" android:id="@id/color_scheme_dialog_new_color" android:background="@color/transparent" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/new_color" android:layout_weight="2.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:paddingLeft="@dimen/color_scheme_dialog_row_padding" android:paddingRight="@dimen/color_scheme_dialog_row_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:layout_below="@id/color_scheme_dialog_row_one">
        <Button android:id="@id/color_scheme_dialog_preset_five" android:background="@color/holo_purple" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <Button android:id="@id/color_scheme_dialog_preset_six" android:background="@color/holo_red_light" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/color_scheme_dialog_row_padding" android:layout_weight="1.0" />
        <Button android:id="@id/color_scheme_dialog_preset_seven" android:background="@color/white" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/color_scheme_dialog_row_padding" android:layout_weight="1.0" />
        <Button android:id="@id/color_scheme_dialog_preset_eight" android:background="@color/black" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/color_scheme_dialog_row_padding" android:layout_weight="1.0" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/color_scheme_dialog_row_padding" android:layout_weight="4.0">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hex" />
            <EditText android:typeface="monospace" android:id="@id/color_scheme_dialog_hex_value" android:layout_width="110.0dip" android:layout_height="wrap_content" android:singleLine="true" android:maxLength="8" android:digits="0123456789ABCDEFabcdef" android:inputType="textFilter" android:imeOptions="actionGo" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>